--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,11 @@ services:
     ports:
       - "8000:8000"
     container_name: wp-scrap
+    environment:
+      - DB_DIR=/app/data  # Ruta donde se guardará la DB dentro del contenedor
     volumes:
-      - ./app:/app/app
-      - ./templates:/app/templates
-      - ./static:/app/static
+      - ./data:/app/data  # Monta directorio local ./data al contenedor /app/data
+      - .:/app  # Monta todo el proyecto para desarrollo con hot reload
+    working_dir: /app  # Establecer directorio de trabajo
     command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--reload"]
+    restart: unless-stopped  # Reinicia automáticamente si falla
