--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ playwright==1.48.0
 sqlalchemy==2.0.25
 alembic==1.13.1
 phonenumbers==8.13.42
+pytest==8.2.2
+pytest-asyncio==0.23.7
+pytest-cov==5.0.0
+httpx==0.27.2
